# anim2mp4

./: README.md  build.bat  build.spec  pyproject.toml
src/: collect.py  encode.py  extract.py  main.py
