[project]
name = "anim2mp4"
version = "0.9.0"
description = "Convert a sequence of images to an MP4 video."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
